--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> 
     <table border="0">
         <tr><td>Daftar Anggota</td></tr>
-		<tr><td> <a href="indah.html"></td></tr>
+		<tr><td> <a href="indah.html">Indah</td></tr>
     </table>
 </body>
 
