--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body> 
     <table border="0">
-        <tr><td>Daftar Anggota</td></tr>
+        <tr><th>Daftar Anggota</th></tr>
     </table>
 </body>
 
