--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> 
     <table border="0">
         <tr><td>Daftar Anggota</td></tr>
-		<tr><td><a href="ridha.html">Ridha</td></tr>
+		<tr><td><a href="ridha.html">Ridha</a></td></tr>
     </table>
 </body>
 
