--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <tr><th>Daftar Anggota</th></tr>
 		<tr><th><a href="ridha.html">Ridha</a></th></tr>
 		<tr><th><a href="nabil.html" >Nabil</a></th></tr>
-		<tr><th> <a href="indah.html">Indah</th></tr>
+		<tr><th><a href="indah.html">Indah</a></th></tr>
 		
     </table>
 </body>
