ubah index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<tr><th><a href="ridha.html">Ridha</a></th></tr>
 		<tr><th><a href="nabil.html">Nabil</a></th></tr>
 		<tr><th><a href="indah.html">Indah</a></th></tr>
-		
-        <tr><td>Daftar Anggota</td></tr>
+		<tr><th><a href="ira.html">Ira</a></th></tr>
 		<tr><td> <a href="renny.html">Renny</td></tr>
 
     </table>
