mengubah metode_pembayaran.html

--- a/metode_pembayaran.html
+++ b/metode_pembayaran.html
@@ -12,8 +12,7 @@
 	<link rel="stylesheet" href="assets/demo.css">
 	<link rel="stylesheet" href="assets/header-basic.css">
 	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
-
-
+	
 </head>
 
 	<body>
@@ -34,14 +33,14 @@
 		</header>
 		
 		<div class=container4>
-		  <h1 class="form-signin-heading">Pilih Metode Pembayaran</h1>
+		  <h1>Pilih Metode Pembayaran</h1>
 		  <hr class="colorgraph"><br>
 			<button class="button button1">Transfer</button>
-			<button class="button button2">Indomaret</button>
-			<button class="button button3">Internet Banking</button><br>
-			<button class="button button4">Paypal</button>
-			<button class="button button5">Bayar di Tempat</button>
-			<button class="button button6">Kartu Kredit</button>
+			<button class="button button1">Indomaret</button>
+			<button class="button button1">Internet Banking</button><br>
+			<button class="button button1">Paypal</button>
+			<button class="button button1">Bayar di Tempat</button>
+			<button class="button button1">Kartu Kredit</button>
 			
 		</div>
 
