ubah download_tiket.html

--- a/download_tiket.html
+++ b/download_tiket.html
@@ -22,7 +22,7 @@
 
 			<div class="header-limiter">
 
-				<h1><a href="#"><span>e-</span> Tickect</a></h1>
+				<h1><a href="#"><img src="logo l300.png" height="50" width="120"> e-Tickect</a></h1>
 
 				<nav>
 					<a href="#">Bantuan</a>
@@ -34,14 +34,14 @@
 		</header>
 		
 		<div class=container4>
-			<h1 class="form-signin-heading">Download Tiket</h1>
+			<h1>Download Tiket</h1>
 			<hr class="colorgraph"><br>
 			
-			<form >
-			
-					<br><br><input type="text" placeholder="Masukkan No. HP">
-					
-					<button type="submit" class="buttonS buttonX">Cek Tiket</button>
+			<form>
+				<input type="text"  placeholder="Masukkan nomor pesanan">
+				<input type="text"  placeholder="Masukkan nomor HP">
+				
+				<button class="buttonS">Cek Tiket!</button>
 			</form>
 		</div>
 
