--- a/ListData/data.html
+++ b/ListData/data.html
@@ -110,7 +110,7 @@
 			      	</select> 
 			    </div>
 			    <div class="col-xs-4">
-			    	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Send</button>
+			    	<button type="button" class="btn btn-primary" >Send</button>
 			    </div>
 		    </div>
 	    </form>
