ubah list data pemesanan

--- a/ListData/data.html
+++ b/ListData/data.html
@@ -107,6 +107,7 @@
 			        	<option>Murdani</option>
 			        	<option>Sayuti</option>
 			        	<option>Munawar</option>
+						<option>Sopian</option>
 			      	</select> 
 			    </div>
 			    <div class="col-xs-4">
