--- a/ListData/data.html
+++ b/ListData/data.html
@@ -37,9 +37,9 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Cara Pesan</a></li>
-					<li><a href="#">Cek Pesanan</a></li>					
-					<li class="active"><a class="btn" href="signin.html">Login / Register</a></li>
+					<li><a href="pesan.html">Data Pemesanan</a></li>
+					<li><a href="data.html">Kirim Data</a></li>					
+					<li class="active"><a class="btn" href="index.html">Log Out</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -151,7 +151,18 @@
 			      	</select> 
 			    </div>
 			    <div class="col-xs-4">
-			    	<button type="button" class="btn btn-primary" >Send</button>
+			    	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Send</button>
+			    	<!-- Modal -->
+					  <div class="modal fade" id="myModal" role="dialog">
+					    <div class="modal-dialog modal-sm">
+					      <div class="modal-content">
+					        <div class="modal-body">
+					          <button type="button" class="close" data-dismiss="modal">&times;</button>
+					          <p><center> Sending . . .</center></p>
+					        </div>
+					      </div>
+					    </div>
+					  </div>
 			    </div>
 		    </div>
 	    </form>
