--- a/ListData/data.html
+++ b/ListData/data.html
@@ -37,9 +37,9 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Cara Pesan</a></li>
-					<li><a href="#">Cek Pesanan</a></li>					
-					<li class="active"><a class="btn" href="signin.html">Login / Register</a></li>
+					<li><a href="pesan.html">Data Pemesanan</a></li>
+					<li><a href="data.html">Kirim Data</a></li>					
+					<li class="active"><a class="btn" href="index.html">Log Out</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -88,11 +88,11 @@
 						<thead>
 							<tr>
 								<th></th>
-								<th>Name</th>
-								<th>Asal</th>
-								<th>Tujuan</th>
+								<th><center>Name</center></th>
+								<th><center>Asal</center></th>
+								<th><center>Tujuan</center></th>
 								<th><center>Jam Keberangkatan</center></th>
-								<th>Keterangan</th>
+								<th><center>Keterangan</center></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -102,11 +102,11 @@
   										<label><input type="checkbox" value=""></label>
 									</div>
 								</td>
-								<td>B_blood</td>
-								<td>Banda Aceh</td>
-								<td>Meulaboh</td>
+								<td><center>B_blood</center></td>
+								<td><center>Banda Aceh</center></td>
+								<td><center>Meulaboh</center></td>
 								<td><center>08.00</center></td>
-								<td>Lunas</td>
+								<td><center>Lunas</center></td>
 							</tr>
 							<tr>
 								<td>
@@ -114,11 +114,11 @@
   										<label><input type="checkbox" value=""></label>
 									</div>
 								</td>
-								<td>A_blood</td>
-								<td>Langsa</td>
-								<td>Medan</td>
+								<td><center>A_blood</center></td>
+								<td><center>Langsa</center></td>
+								<td><center>Medan</center></td>
 								<td><center>10.00</center></td>
-								<td>Belum Lunas</td>
+								<td><center>Belum Lunas</center></td>
 							</tr>
 							<tr>
 								<td>
@@ -126,11 +126,11 @@
   										<label><input type="checkbox" value=""></label>
 									</div>
 								</td>
-								<td>O_blood</td>
-								<td>Banda Aceh</td>
-								<td>Meulaboh</td>
+								<td><center>O_blood</center></td>
+								<td><center>Banda Aceh</center></td>
+								<td><center>Meulaboh</center></td>
 								<td><center>08.00</center></td>
-								<td>Belum lunas</td>
+								<td><center>Belum lunas</center></td>
 							</tr>
 						</tbody>
 					</table>
@@ -151,7 +151,18 @@
 			      	</select> 
 			    </div>
 			    <div class="col-xs-4">
-			    	<button type="button" class="btn btn-primary" >Send</button>
+			    	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Send</button>
+			    	<!-- Modal -->
+					  <div class="modal fade" id="myModal" role="dialog">
+					    <div class="modal-dialog modal-sm">
+					      <div class="modal-content">
+					        <div class="modal-body">
+					          <button type="button" class="close" data-dismiss="modal">&times;</button>
+					          <p><center> Sending . . .</center></p>
+					        </div>
+					      </div>
+					    </div>
+					  </div>
 			    </div>
 		    </div>
 	    </form>
