--- a/carapesan.html
+++ b/carapesan.html
@@ -237,9 +237,9 @@
 							<p>Itu karena kami memberikan kemudahan kepada anda dari segi waktu dalam melakukan pemesanan tiket L300 dan dengan kenyamanan penumpang yang selalu kami jaga.
 							<p>e-Ticket adalah aplikasi pembelian tiket L300 online berbasis web yang dapat digunakan oleh siapapun, kapanpun dan dimanapun. Kami menyediakan pilihan CV, kursi, serta jam dan tanggal keberangkatan.
 							<p>Pembayaran tiket dapat dilakukan melalui beberapa cara, diantaranya :</p>
-							<p>1. </p>
-							<p>2. </p>
-							<p>3. </p>
+							<p>1.Transfer ATM</p>
+							<p>2.Internet Banking</p>
+							<p>3.Indomaret</p>
 							<p>Jika anda membutuhkan informasi lebih lanjut, silahkan hubungi contact kami.
 							<p>Terima kasih</p>
 							</div>
