perbaiki modal detail pemesanan

--- a/ListData/pesan.html
+++ b/ListData/pesan.html
@@ -85,9 +85,9 @@
 												</tr>
 												<tr>
 													<td>
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
+													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#ira" >Detail</button>
 													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
+													  <div class="modal fade" id="ira" role="dialog">
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -173,9 +173,9 @@
 												</tr>
 												<tr>
 													<td>
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
+													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#A_blood">Detail</button>
 													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
+													  <div class="modal fade" id="A_blood" role="dialog">
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -261,9 +261,9 @@
 												</tr>
 												<tr>
 													<td>
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
+													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#ridha">Detail</button>
 													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
+													  <div class="modal fade" id="ridha" role="dialog">
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -280,7 +280,7 @@
 																		<td>Jam Berangkat</td> <td>:</td> <td> 10.00</td>
 																	</tr>
 																	<tr>
-																		<td>Nama</td> <td>:</td> <td>A_blood</td>
+																		<td>Nama</td> <td>:</td> <td>Ridha Aulia</td>
 																	</tr>
 																	<tr>
 																		<td>No. Handphone</td> <td>:</td> <td>08279034xxxx</td>
@@ -353,9 +353,9 @@
 											</tr>
 											<tr>
 													<td>
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
+													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#b">Detail</button>
 													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
+													  <div class="modal fade" id="b" role="dialog">
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -441,9 +441,9 @@
 											</tr>
 											<tr>
 													<td>
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
+													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#o">Detail</button>
 													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
+													  <div class="modal fade" id="o" role="dialog">
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
