update file html

--- a/pesan.html
+++ b/pesan.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="RPL - KEL 1">
 	
-	<title>L300</title>
+	<title>L300 - Data Pesanan</title>
 
 	<link rel="shortcut icon" href="assets/images/logo1.png">
 	
@@ -547,8 +547,9 @@
 					<div class="col-md-6 widget">
 						<h3 class="widget-title">Tentang Kami</h3>
 						<div class="widget-body">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-							<p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
+							<p>Mengapa anda harus memesan tiket L300 melalui e-Ticket?</p>
+							<p>Itu karena kami memberikan kemudahan kepada anda dari segi waktu dalam melakukan pemesanan tiket L300 dan dengan kenyamanan penumpang yang selalu kami jaga.</p>
+							<p>e-Ticket adalah aplikasi pembelian tiket L300 online berbasis web yang dapat digunakan oleh siapapun, kapanpun dan dimanapun. Kami menyediakan pilihan CV, kursi, serta jam dan tanggal keberangkatan.</p>
 						</div>
 					</div>
 
