--- a/pesan.html
+++ b/pesan.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="RPL - KEL 1">
 	
-	<title>L300 - Data Pesanan</title>
+	<title>L300</title>
 
 	<link rel="shortcut icon" href="assets/images/logo1.png">
 	
@@ -85,15 +85,9 @@
 												</tr>
 												<tr>
 													<td>
-<<<<<<< HEAD
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
-													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
-=======
 													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#ira" >Detail</button>
 													<!-- Modal -->
 													  <div class="modal fade" id="ira" role="dialog">
->>>>>>> Ira
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -179,15 +173,9 @@
 												</tr>
 												<tr>
 													<td>
-<<<<<<< HEAD
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
-													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
-=======
 													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#A_blood">Detail</button>
 													<!-- Modal -->
 													  <div class="modal fade" id="A_blood" role="dialog">
->>>>>>> Ira
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -273,15 +261,9 @@
 												</tr>
 												<tr>
 													<td>
-<<<<<<< HEAD
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
-													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
-=======
 													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#ridha">Detail</button>
 													<!-- Modal -->
 													  <div class="modal fade" id="ridha" role="dialog">
->>>>>>> Ira
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -298,11 +280,7 @@
 																		<td>Jam Berangkat</td> <td>:</td> <td> 10.00</td>
 																	</tr>
 																	<tr>
-<<<<<<< HEAD
-																		<td>Nama</td> <td>:</td> <td>A_blood</td>
-=======
 																		<td>Nama</td> <td>:</td> <td>Ridha Aulia</td>
->>>>>>> Ira
 																	</tr>
 																	<tr>
 																		<td>No. Handphone</td> <td>:</td> <td>08279034xxxx</td>
@@ -375,15 +353,9 @@
 											</tr>
 											<tr>
 													<td>
-<<<<<<< HEAD
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
-													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
-=======
 													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#b">Detail</button>
 													<!-- Modal -->
 													  <div class="modal fade" id="b" role="dialog">
->>>>>>> Ira
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -469,15 +441,9 @@
 											</tr>
 											<tr>
 													<td>
-<<<<<<< HEAD
-													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">Detail</button>
-													<!-- Modal -->
-													  <div class="modal fade" id="myModal" role="dialog">
-=======
 													<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#o">Detail</button>
 													<!-- Modal -->
 													  <div class="modal fade" id="o" role="dialog">
->>>>>>> Ira
 													    <div class="modal-dialog modal-sm">
 													      <div class="modal-content">
 													        <div class="modal-header">
@@ -581,9 +547,8 @@
 					<div class="col-md-6 widget">
 						<h3 class="widget-title">Tentang Kami</h3>
 						<div class="widget-body">
-							<p>Mengapa anda harus memesan tiket L300 melalui e-Ticket?</p>
-							<p>Itu karena kami memberikan kemudahan kepada anda dari segi waktu dalam melakukan pemesanan tiket L300 dan dengan kenyamanan penumpang yang selalu kami jaga.</p>
-							<p>e-Ticket adalah aplikasi pembelian tiket L300 online berbasis web yang dapat digunakan oleh siapapun, kapanpun dan dimanapun. Kami menyediakan pilihan CV, kursi, serta jam dan tanggal keberangkatan.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
+							<p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
 						</div>
 					</div>
 
