--- a/cektiket.html
+++ b/cektiket.html
@@ -64,7 +64,7 @@
 				<p>Masukkan data pesanan Anda.<br> Jika Anda memiliki pesanan belum terbayarkan, pemesanan tersebut juga dapat dilanjutkan.*<br><br></p>
 				
 				<div align="center" class="row">
-						<form action="detailpesan.html">
+						<form action="downloadtiket.html">
 							<input type="text"  class="form-control" placeholder="Masukkan nomor pesanan">
 							<input type="text"  class="form-control" placeholder="Masukkan nomor HP">
 							<button class="btn btn-success">Cek Tiket!</button>
